Removed the highlight-tab class and used the hr element instead for styling the color tab on top of card.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- cards portion -->
         <div class="container--cards">
           <div class="card">
-            <hr class="highlight-card-tab bg-cyan" />
+            <hr class="bg-cyan" />
             <div class="container--card-content">
               <h2>Supervisor</h2>
               <p>Monitors activity to identify project roadblocks</p>
@@ -42,7 +42,7 @@
           <!-- middle cards -->
           <div class="container--middle-cards">
             <div class="card">
-              <hr class="highlight-card-tab bg-red" />
+              <hr class="bg-red" />
               <div class="container--card-content">
                 <h2>Team Builder</h2>
                 <p>
@@ -53,7 +53,7 @@
               </div>
             </div>
             <div class="card">
-              <hr class="highlight-card-tab bg-orange" />
+              <hr class="bg-orange" />
               <div class="container--card-content">
                 <h2>Karma</h2>
                 <p>Regularly evaluates our talent to ensure quality</p>
@@ -63,7 +63,7 @@
             <!-- ^ end of middle cards ^ -->
           </div>
           <div class="card">
-            <hr class="highlight-card-tab bg-blue" />
+            <hr class="bg-blue" />
             <div class="container--card-content">
               <h2>Calculator</h2>
               <p>
