--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             data points to ensure that your project is successful
           </p>
         </div>
-        <!-- cards portion -->
+        <!-- cards area -->
         <div class="container--cards">
           <div class="card">
             <hr class="bg-cyan" />
