--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container--card-content">
               <h2>Supervisor</h2>
               <p>Monitors activity to identify project roadblocks</p>
-              <img src="images\icon-supervisor.svg" alt="" loading="lazy" />
+              <img src="images/icon-supervisor.svg" alt="" loading="lazy" />
             </div>
           </div>
           <!-- middle cards -->
@@ -49,7 +49,7 @@
                   Scans our talent network to create the optimal team for your
                   project
                 </p>
-                <img src="images\icon-team-builder.svg" alt="" loading="lazy" />
+                <img src="images/icon-team-builder.svg" alt="" loading="lazy" />
               </div>
             </div>
             <div class="card">
@@ -57,7 +57,7 @@
               <div class="container--card-content">
                 <h2>Karma</h2>
                 <p>Regularly evaluates our talent to ensure quality</p>
-                <img src="images\icon-karma.svg" alt="" loading="lazy" />
+                <img src="images/icon-karma.svg" alt="" loading="lazy" />
               </div>
             </div>
             <!-- ^ end of middle cards ^ -->
@@ -70,7 +70,7 @@
                 Uses data from past projects to provide better delivery
                 estimates
               </p>
-              <img src="images\icon-calculator.svg" alt="" loading="lazy" />
+              <img src="images/icon-calculator.svg" alt="" loading="lazy" />
             </div>
           </div>
         </div>
